# GLGames2D

./: CMakeLists.txt  README.md
01_SpaceForce2D/: Background.cpp  Background.h  CMakeLists.txt  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  EngineFire.cpp  EngineFire.h  Explosion.cpp  Explosion.h  Fire.cpp  Fire.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Gun.cpp  Gun.h  IntroState.cpp  IntroState.h  Player.cpp  Player.h  SpaceForce2D.rc  State.h  main.cpp
01_SpaceForce2D/res/: frames_decs.txt
Framework2D/: Application.cpp  Application.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Engine.cpp  Engine.h  GeomtreyFactory.cpp  GeomtreyFactory.h  Keyboard.cpp  Keyboard.h  Rectangle.cpp  Rectangle.h  ShaderProgram.cpp  ShaderProgram.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  TextureFactory.cpp  TextureFactory.h  TimeStep.h  Window.cpp  Window.h
glfw/: CMakeLists.txt
